2002-05-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py (FilterParser.firstmatch): *-ezmlm sources now
	match the parent directory DIR rather than DIR/subscribers.

	(FilterParser.firstmatch): *-mailman sources now match just the
	list directory.  The config database is located automatically.

2002-05-02  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* MTA.py (MTA.deliver): Deliver the message according to
	Defaults.DELIVERY via a Deliver.Deliver() object.

	(Qmail.deliver): Ditto.

	* Defaults.py: DELIVERY replaces LOCAL_DELIVERY_AGENT.

2002-05-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDARC): Allow ~/.tmda/config as a second default
	location for the configuration file.

2002-04-30  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py: Include example settings for optional variables
	here instead of sample.tmdarc.
	
2002-04-30  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Version.py (PLATFORM): Use distutils.util.get_platform().

2002-04-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (PENDING_DELETE_APPEND, PENDING_RELEASE_APPEND): New
	variables.
	
2002-04-28  Jason R. Mastaler  <jason@mastaler.com>

	* HMAC.py: XOR optimizations.

2002-04-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TERSE_SUMMARY_HEADERS): New variable.

	* Util.py (make_date): Support LOCALDATE.

	* Defaults.py (LOCALDATE): New variable.

2002-04-22  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (make_date): Include our own code until such time as
	we can assume availability of the email package.

2002-04-02  Jason R. Mastaler  <jason@aguirre.la.mastaler.com>

	* Util.py (pickleit): Bugfix. Insure the tempfile directory is the
	same one which we are writing to pickle to.

2002-04-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Version.py (ALL): Fall back to using sys.platform if os.uname()