@@ -29,7 +29,6 @@
 
 import binascii
 import os
-import stat
 import string
 import sys
 
@@ -63,7 +62,7 @@ PARENTDIR = os.path.split(os.path.dirname(progpath))[0] # '../'
 # If the file /etc/tmdarc exists, read it before ~/.tmdarc.
 # Make site-wide configuration changes to this file.
 GLOBAL_TMDARC = '/etc/tmdarc'
-if os.path.isfile(GLOBAL_TMDARC):
+if os.path.exists(GLOBAL_TMDARC):
     try:
         execfile(GLOBAL_TMDARC)
     except:
@@ -74,30 +73,12 @@ if os.path.isfile(GLOBAL_TMDARC):
 TMDARC = os.environ.get('TMDARC')
 if not TMDARC:
     TMDARC = os.path.expanduser('~/.tmdarc')
-    if not os.path.isfile(TMDARC):
+    if not os.path.exists(TMDARC):
         TMDARC = os.path.expanduser('~/.tmda/config')
 
 # Read-in the user's configuration file.
 if os.path.exists(TMDARC):
     execfile(TMDARC)
-else:
-    raise Errors.ConfigError, "Can't open configuration file: " + TMDARC
-
-# Check for proper file permissions before proceeding.
-statinfo = os.stat(TMDARC)
-permbits = stat.S_IMODE(statinfo[stat.ST_MODE])
-mode = int(oct(permbits))
-
-# ALLOW_MODE_640
-# Set this variable to 1 if you want to allow mode 640 .tmdarc files.
-# Default is 0 (turned off)
-if not vars().has_key('ALLOW_MODE_640'):
-    ALLOW_MODE_640 = 0
-
-if ALLOW_MODE_640 and mode in (400, 600, 640):
-    pass
-elif mode not in (400, 600):
-    raise Errors.ConfigError, TMDARC + " must be chmod 400 or 600!"
 
 
 import Util
@@ -164,6 +145,34 @@ if not vars().has_key('DELIVERY'):
 # Default is "-"
 if not vars().has_key('RECIPIENT_DELIMITER'):
     RECIPIENT_DELIMITER = "-"
+
+# ALLOW_MODE_640
+# Set this variable to 1 if you want to allow a mode 640 CRYPT_KEY_FILE.
+# Default is 0 (turned off)
+if not vars().has_key('ALLOW_MODE_640'):
+    ALLOW_MODE_640 = 0
+
+# CRYPT_KEY_FILE
+# File which contains your unique TMDA secret key generated by the
+# `tmda-keygen' program.  The key should be unquoted in the file.
+# This file must be chmod 400 or 600, unless ALLOW_MODE_640 is on.
+# Default is ~/.tmda/crypt_key
+if not vars().has_key('CRYPT_KEY_FILE'):
+    CRYPT_KEY_FILE = os.path.join(DATADIR, 'crypt_key')
+if os.path.exists(CRYPT_KEY_FILE):
+    crypt_key_filemode = Util.getfilemode(CRYPT_KEY_FILE)
+    if crypt_key_filemode not in (400, 600):
+        if ALLOW_MODE_640 and crypt_key_filemode == 640:
+            pass
+        else:
+            raise Errors.ConfigError, \
+                  CRYPT_KEY_FILE + " must be chmod 400 or 600!"
+else:
+    raise Errors.ConfigError, "Can't find key file: " + CRYPT_KEY_FILE
+
+# Read key from CRYPT_KEY_FILE, and then convert it from hex back into
+# raw binary.  Hex has only 4 bits of entropy per byte as opposed to 8.
+CRYPT_KEY = binascii.unhexlify(open(CRYPT_KEY_FILE).read().strip())
 
 # SENDMAIL
 # The path to the sendmail program, or sendmail compatibility
@@ -353,17 +362,6 @@ if not vars().has_key('DATED_TEMPLATE_VARS'):
 if not vars().has_key('SENDER_TEMPLATE_VARS'):
     SENDER_TEMPLATE_VARS = 0
 
-# CRYPT_KEY
-# Your encryption key should be unique and kept secret.
-# Use the included "tmda-keygen" program to generate your key.
-# No default.
-if not vars().has_key('CRYPT_KEY'):
-    raise Errors.ConfigError, "CRYPT_KEY not defined in " + TMDARC
-else:
-    # Convert key from hex back into raw binary.
-    # Hex has only 4 bits of entropy per byte as opposed to 8.
-    CRYPT_KEY = binascii.unhexlify(CRYPT_KEY)
-    
 # FILTER_INCOMING
 # Filter file which controls how incoming messages are tagged.
 # Look for the filter-file in the environment first.
