@@ -1,3 +1,7 @@
+2002-05-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-keygen (main): Print only the unquoted key.
+
 2002-05-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-rfilter (logit): Log Reply-To if it exists in the message.
